--- a/Balazs.ipynb
+++ b/Balazs.ipynb
@@ -37,6 +37,388 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>objectid_1</th>\n",
+       "      <th>objectid</th>\n",
+       "      <th>acreage</th>\n",
+       "      <th>sqft</th>\n",
+       "      <th>final_cat</th>\n",
+       "      <th>type</th>\n",
+       "      <th>sector</th>\n",
+       "      <th>origpkname</th>\n",
+       "      <th>updatepknm</th>\n",
+       "      <th>alterntnam</th>\n",
+       "      <th>...</th>\n",
+       "      <th>globalid</th>\n",
+       "      <th>created_user</th>\n",
+       "      <th>created_date</th>\n",
+       "      <th>last_edited_user</th>\n",
+       "      <th>last_edited_date</th>\n",
+       "      <th>maintenanceresponsibility</th>\n",
+       "      <th>dpw_ac</th>\n",
+       "      <th>globalid_1</th>\n",
+       "      <th>shape_area</th>\n",
+       "      <th>shape_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1202</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.959034</td>\n",
+       "      <td>41775.367101</td>\n",
+       "      <td>Neighborhood Park</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Cliffside Parklet</td>\n",
+       "      <td>August Wilson Park</td>\n",
+       "      <td>Cliffside Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>764d9a2f-719c-49c2-b747-8f276149bf04</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Schenley</td>\n",
+       "      <td>0.959034</td>\n",
+       "      <td>f781af9c-9ec2-4b5e-b5c5-9cc21608635c</td>\n",
+       "      <td>6709.199219</td>\n",
+       "      <td>390.397012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1203</td>\n",
+       "      <td>198</td>\n",
+       "      <td>2.060117</td>\n",
+       "      <td>89738.347520</td>\n",
+       "      <td>Neighborhood Park</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Young Field</td>\n",
+       "      <td>Young Field Park</td>\n",
+       "      <td>Young Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9b969f67-1f2e-4f4b-8556-e4ac49ca208e</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Riverview</td>\n",
+       "      <td>2.060117</td>\n",
+       "      <td>659c4c55-50fc-4883-8606-76f029fcca47</td>\n",
+       "      <td>14423.417969</td>\n",
+       "      <td>511.980181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>158</td>\n",
+       "      <td>0.468682</td>\n",
+       "      <td>20415.724875</td>\n",
+       "      <td>Neighborhood Park</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Revenue Park</td>\n",
+       "      <td>Roland Lockridge Community Park</td>\n",
+       "      <td>Roland Lockridge Community Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>44bbbdf5-c2db-451c-b880-9251b8211455</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Frick</td>\n",
+       "      <td>0.468682</td>\n",
+       "      <td>04e61cab-bea6-47dd-964a-0723197726cf</td>\n",
+       "      <td>3273.722656</td>\n",
+       "      <td>236.488235</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1205</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1.955430</td>\n",
+       "      <td>85178.182207</td>\n",
+       "      <td>Neighborhood Park</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Friendship Park</td>\n",
+       "      <td>Friendship Park</td>\n",
+       "      <td>Friendship Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>f95cbafc-dcd8-493f-8b98-89745c6434ca</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Highland</td>\n",
+       "      <td>1.955430</td>\n",
+       "      <td>22563a68-61d3-46f3-9d5c-4558ee12be1f</td>\n",
+       "      <td>13686.265625</td>\n",
+       "      <td>760.982871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1206</td>\n",
+       "      <td>87</td>\n",
+       "      <td>5.108070</td>\n",
+       "      <td>222506.623799</td>\n",
+       "      <td>Neighborhood Park</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Heths Playground</td>\n",
+       "      <td>Heth's Park</td>\n",
+       "      <td>Heth's Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>a6a4ac92-5a00-4af5-9f11-716e51079fea</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Highland</td>\n",
+       "      <td>5.108070</td>\n",
+       "      <td>b5b34833-e1d5-430f-afcc-40a1670d545d</td>\n",
+       "      <td>35767.898438</td>\n",
+       "      <td>875.156997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1207</td>\n",
+       "      <td>58</td>\n",
+       "      <td>0.853850</td>\n",
+       "      <td>37193.575085</td>\n",
+       "      <td>Regional Park</td>\n",
+       "      <td>RP</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Eileen McCoy Parklet</td>\n",
+       "      <td>Emerald View Park - Eileen McCoy Park</td>\n",
+       "      <td>Emerald View Regional Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>85e78b3f-6464-4be8-a756-695779735770</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Emerald</td>\n",
+       "      <td>0.853850</td>\n",
+       "      <td>3b0dedc7-de7f-4155-bacc-fd5f442211fd</td>\n",
+       "      <td>5971.886719</td>\n",
+       "      <td>312.666582</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1208</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1.217859</td>\n",
+       "      <td>53049.723690</td>\n",
+       "      <td>Neighborhood Park</td>\n",
+       "      <td>NP</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Pauline Parklet</td>\n",
+       "      <td>Pauline Park</td>\n",
+       "      <td>Pauline Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8d2ca331-e92f-4081-91f6-a991b913975d</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - McKinley</td>\n",
+       "      <td>1.217859</td>\n",
+       "      <td>8fae002f-672f-4139-8bb3-5e1c43630b06</td>\n",
+       "      <td>8509.390625</td>\n",
+       "      <td>385.254005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1209</td>\n",
+       "      <td>180</td>\n",
+       "      <td>0.316032</td>\n",
+       "      <td>13766.279986</td>\n",
+       "      <td>Beautification Site</td>\n",
+       "      <td>BTF</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Thomas Parklet</td>\n",
+       "      <td>Thomas Park</td>\n",
+       "      <td>Thomas Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29ea1e26-197f-4e3d-926b-4fd4b7988d76</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Riverview</td>\n",
+       "      <td>0.316032</td>\n",
+       "      <td>ce5d83e9-a64c-494a-81d2-10722dd5c85b</td>\n",
+       "      <td>2210.261719</td>\n",
+       "      <td>275.025060</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1210</td>\n",
+       "      <td>86</td>\n",
+       "      <td>8.320236</td>\n",
+       "      <td>362428.031294</td>\n",
+       "      <td>Community Park</td>\n",
+       "      <td>CP</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Hershel Playground</td>\n",
+       "      <td>Herschel Park</td>\n",
+       "      <td>Hershel Park</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5011c72c-2a08-418b-844d-b3dbbca6075e</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Emerald</td>\n",
+       "      <td>8.320236</td>\n",
+       "      <td>dd29ebe8-77bd-4be9-97c6-1b06c296ed32</td>\n",
+       "      <td>58194.480469</td>\n",
+       "      <td>1042.200733</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1211</td>\n",
+       "      <td>193</td>\n",
+       "      <td>3.267626</td>\n",
+       "      <td>142337.220029</td>\n",
+       "      <td>Public School</td>\n",
+       "      <td>SCH</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Westwood School</td>\n",
+       "      <td>Westwood School Park</td>\n",
+       "      <td>Westwood School</td>\n",
+       "      <td>...</td>\n",
+       "      <td>843e43a8-79ed-42c4-975b-9791c5161212</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>pgh.dcp.allisot</td>\n",
+       "      <td>2023-03-21T14:04:58.979000+00:00</td>\n",
+       "      <td>Parks - Emerald</td>\n",
+       "      <td>3.267626</td>\n",
+       "      <td>1928bf6c-f90c-4702-9944-9fedc13f60b6</td>\n",
+       "      <td>22848.906250</td>\n",
+       "      <td>607.297220</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   objectid_1  objectid   acreage           sqft            final_cat type  \\\n",
+       "0        1202        36  0.959034   41775.367101    Neighborhood Park   NP   \n",
+       "1        1203       198  2.060117   89738.347520    Neighborhood Park   NP   \n",
+       "2        1204       158  0.468682   20415.724875    Neighborhood Park   NP   \n",
+       "3        1205        72  1.955430   85178.182207    Neighborhood Park   NP   \n",
+       "4        1206        87  5.108070  222506.623799    Neighborhood Park   NP   \n",
+       "5        1207        58  0.853850   37193.575085        Regional Park   RP   \n",
+       "6        1208       148  1.217859   53049.723690    Neighborhood Park   NP   \n",
+       "7        1209       180  0.316032   13766.279986  Beautification Site  BTF   \n",
+       "8        1210        86  8.320236  362428.031294       Community Park   CP   \n",
+       "9        1211       193  3.267626  142337.220029        Public School  SCH   \n",
+       "\n",
+       "   sector            origpkname                             updatepknm  \\\n",
+       "0      15     Cliffside Parklet                     August Wilson Park   \n",
+       "1       2           Young Field                       Young Field Park   \n",
+       "2       8          Revenue Park        Roland Lockridge Community Park   \n",
+       "3      12       Friendship Park                        Friendship Park   \n",
+       "4      12      Heths Playground                            Heth's Park   \n",
+       "5       6  Eileen McCoy Parklet  Emerald View Park - Eileen McCoy Park   \n",
+       "6       5       Pauline Parklet                           Pauline Park   \n",
+       "7      16        Thomas Parklet                            Thomas Park   \n",
+       "8       4    Hershel Playground                          Herschel Park   \n",
+       "9       4       Westwood School                   Westwood School Park   \n",
+       "\n",
+       "                        alterntnam  ...                              globalid  \\\n",
+       "0                   Cliffside Park  ...  764d9a2f-719c-49c2-b747-8f276149bf04   \n",
+       "1                       Young Park  ...  9b969f67-1f2e-4f4b-8556-e4ac49ca208e   \n",
+       "2  Roland Lockridge Community Park  ...  44bbbdf5-c2db-451c-b880-9251b8211455   \n",
+       "3                  Friendship Park  ...  f95cbafc-dcd8-493f-8b98-89745c6434ca   \n",
+       "4                      Heth's Park  ...  a6a4ac92-5a00-4af5-9f11-716e51079fea   \n",
+       "5       Emerald View Regional Park  ...  85e78b3f-6464-4be8-a756-695779735770   \n",
+       "6                     Pauline Park  ...  8d2ca331-e92f-4081-91f6-a991b913975d   \n",
+       "7                      Thomas Park  ...  29ea1e26-197f-4e3d-926b-4fd4b7988d76   \n",
+       "8                     Hershel Park  ...  5011c72c-2a08-418b-844d-b3dbbca6075e   \n",
+       "9                  Westwood School  ...  843e43a8-79ed-42c4-975b-9791c5161212   \n",
+       "\n",
+       "      created_user                      created_date last_edited_user  \\\n",
+       "0  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "1  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "2  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "3  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "4  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "5  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "6  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "7  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "8  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "9  pgh.dcp.allisot  2023-03-21T14:04:58.979000+00:00  pgh.dcp.allisot   \n",
+       "\n",
+       "                   last_edited_date maintenanceresponsibility    dpw_ac  \\\n",
+       "0  2023-03-21T14:04:58.979000+00:00          Parks - Schenley  0.959034   \n",
+       "1  2023-03-21T14:04:58.979000+00:00         Parks - Riverview  2.060117   \n",
+       "2  2023-03-21T14:04:58.979000+00:00             Parks - Frick  0.468682   \n",
+       "3  2023-03-21T14:04:58.979000+00:00          Parks - Highland  1.955430   \n",
+       "4  2023-03-21T14:04:58.979000+00:00          Parks - Highland  5.108070   \n",
+       "5  2023-03-21T14:04:58.979000+00:00           Parks - Emerald  0.853850   \n",
+       "6  2023-03-21T14:04:58.979000+00:00          Parks - McKinley  1.217859   \n",
+       "7  2023-03-21T14:04:58.979000+00:00         Parks - Riverview  0.316032   \n",
+       "8  2023-03-21T14:04:58.979000+00:00           Parks - Emerald  8.320236   \n",
+       "9  2023-03-21T14:04:58.979000+00:00           Parks - Emerald  3.267626   \n",
+       "\n",
+       "                             globalid_1    shape_area shape_length  \n",
+       "0  f781af9c-9ec2-4b5e-b5c5-9cc21608635c   6709.199219   390.397012  \n",
+       "1  659c4c55-50fc-4883-8606-76f029fcca47  14423.417969   511.980181  \n",
+       "2  04e61cab-bea6-47dd-964a-0723197726cf   3273.722656   236.488235  \n",
+       "3  22563a68-61d3-46f3-9d5c-4558ee12be1f  13686.265625   760.982871  \n",
+       "4  b5b34833-e1d5-430f-afcc-40a1670d545d  35767.898438   875.156997  \n",
+       "5  3b0dedc7-de7f-4155-bacc-fd5f442211fd   5971.886719   312.666582  \n",
+       "6  8fae002f-672f-4139-8bb3-5e1c43630b06   8509.390625   385.254005  \n",
+       "7  ce5d83e9-a64c-494a-81d2-10722dd5c85b   2210.261719   275.025060  \n",
+       "8  dd29ebe8-77bd-4be9-97c6-1b06c296ed32  58194.480469  1042.200733  \n",
+       "9  1928bf6c-f90c-4702-9944-9fedc13f60b6  22848.906250   607.297220  \n",
+       "\n",
+       "[10 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "parks = pd.read_csv(\"parks.csv\")\n",
+    "parks.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
