--- a/Balazs.ipynb
+++ b/Balazs.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "What is the best neighbourhood for a pigeon to live in?\n",
     "Well, the biggest one. More space, more garbage to pick at.\n",
-    "But, since we now know that pigeons are actually surveilance drones, the ones with the most people in them.\n",
+    "But, since we now know that pigeons eat garbage, the ones with the most people in them is also important.\n",
     "\n",
     "Therefore, the most populus and biggest by size.\n",
     "\n",
