--- a/jaz88.ipynb
+++ b/jaz88.ipynb
@@ -100,14 +100,19 @@
       "('SHARPSBURG', 8)\n",
       "('OAKLAND', 5)\n",
       "('PENN HILLS', 5)\n",
-      "('SOUTH HILLS', 4)\n"
+      "('SOUTH HILLS', 4)\n",
+      "('BROOKLINE', 4)\n",
+      "('SQUIRREL HILL', 3)\n",
+      "('BRENTWOOD', 3)\n",
+      "('WILKINSBURG', 3)\n",
+      "('ALLEGHENY', 2)\n"
      ]
     }
    ],
    "source": [
     "# Output\n",
     "sorted = {k:v for k,v in sorted(wifi_count.items(), key=lambda v:v[1], reverse=True)}\n",
-    "count = 5\n",
+    "count = 10\n",
     "for item in sorted.items():\n",
     "    print(item)\n",
     "    if count == 0:\n",
@@ -123,7 +128,12 @@
    "source": [
     "# Conclusion:\n",
     "\n",
-    "The inner city has more\n"
+    "The city has the most wifi spots\n",
+    "This data is probably skewed because of teh zip code translation, a lot of zip codes are generalized to pittsburgh\n",
+    "But I feel Confident that there is also a lot of buisnesses and institutes that have wifi.\n",
+    "\n",
+    "I am suprirsed by braddock also having many more spots, compared to all the rest being so low.\n",
+    "I dont know that area so I cant make any assumtions about it."
    ]
   },
   {
@@ -393,6 +403,7 @@
     }
    ],
    "source": [
+    "# geopandas for drawing a maop\n",
     "import geopandas\n",
     "%matplotlib inline\n",
     "wifi_count =  {k.lower(): v for k, v in wifi_count.items()}\n",
@@ -517,7 +528,9 @@
     "# do the merge\n",
     "count_map = neighborhoods.merge(s, how='left', left_on='hood', right_on='neighborhood')\n",
     "# look at the head to confirm it merged correctly\n",
-    "count_map[['hood','count','geometry']].head()"
+    "count_map[['hood','count','geometry']].head()\n",
+    "# There seems to be an issue with the merge\n",
+    "# I can see that my data has only Oakland while the map has central, north, and west this is part of the issue"
    ]
   },
   {
@@ -552,7 +565,7 @@
     "               edgecolor=\"white\",        # outline the districts in white\n",
     "               legend=True,              # show the legend\n",
     "               legend_kwds={'label': \"Number of Wifi Spots\"}, # label the legend\n",
-    "               figsize=(15, 10),         # set the size\n",
+    "               figsize=(15, 10),         # set the  size\n",
     "               missing_kwds={\"color\": \"lightgrey\"} # set disctricts with no data to gray\n",
     "               )"
    ]
