--- a/jaa230-projectCode.ipynb
+++ b/jaa230-projectCode.ipynb
@@ -257,7 +257,7 @@
    "source": [
     "# conclusion\n",
     "\n",
-    "##### squirel hill south is the neighborhood with the most amount of traffic so it would satisfy a pigeon who wants to live there"
+    "##### Squirel Hill South is the neighborhood with the most amount of traffic, which brings additional people to the neigborhood, and we know, more people, more pigeons."
    ]
   },
   {
